--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,3 +1,3 @@
-$primary-color: '#FEC124';
-$secondary-color: '#2AB150';
-$tertiary-color: '#000000';
+$primary-color: #2ab150;
+$secondary-color: #fec124;
+$tertiary-color: #000000;
