--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -3,7 +3,7 @@
   align-items: center;
   letter-spacing: 0.3px;
   height: 100vh;
-  background-image: url('../../assets/images/questions-bro.svg');
+  background-image: url('/questions-bro.svg');
   // background-image: url('../../assets/images/home-woman.svg');
   background-position: bottom 0 right 120px;
   background-repeat: no-repeat;
