--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -36,7 +36,7 @@
 
 .footer-bottom {
   background: colors.$primary-color;
-  padding: 30px 0;
+  padding: 30px 0 !important;
   font-weight: 500;
   letter-spacing: 0.3px;
   margin-top: 80px;
