--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,6 +3,7 @@
 .navbar {
   width: 100%;
   position: fixed;
+  transition: all 0.3s linear;
 
   div {
     display: flex;
@@ -46,5 +47,15 @@
         }
       }
     }
+  }
+}
+
+.navbar-fixed {
+  background: colors.$primary-color;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
+  z-index: 9999;
+
+  ul li a {
+    color: #ffffff !important;
   }
 }
