header, feedback and about styles

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,3 +1,4 @@
-$primary-color: #2ab150;
-$secondary-color: #fec124;
+$primary-color: #26bb7d;
+$secondary-color: #3bc5f0;
+$yellow-color: #fec124;
 $tertiary-color: #000000;
