--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -44,15 +44,15 @@ button {
   border-radius: 3px;
   letter-spacing: 0.3px;
   font-weight: 600;
-  border: 2px solid #2ab150;
-  background: #2ab150;
+  border: 2px solid $primary-color;
+  background: $primary-color;
   color: #ffffff;
 }
 
 .btn-light {
   background: #ffffff;
-  color: #2ab150;
-  border: 2px solid #2ab150;
+  color: $primary-color;
+  border: 2px solid $primary-color;
 }
 
 img {
