--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -1,4 +1,60 @@
 @use "../../assets/styles/colors.scss" as colors;
 
 .projects {
+  img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+
+  li {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 60px;
+
+    &:not(:last-child) {
+      margin-bottom: 80px;
+    }
+
+    > div {
+      h3 {
+        font-size: 38px;
+        font-weight: 500;
+        color: colors.$secondary-color;
+      }
+
+      h1 {
+        margin: 15px 0;
+      }
+
+      p {
+        line-height: 26px;
+      }
+    }
+
+    .projects-content-button {
+      display: flex;
+      align-items: center;
+      width: max-content;
+      margin-top: 35px;
+      cursor: pointer;
+      border-radius: 3px;
+      letter-spacing: 0.3px;
+      padding: 10px 0;
+      font-weight: 500;
+      color: #595959;
+      transition: all 0.3s linear;
+
+      &:hover {
+        background: colors.$primary-color;
+        color: #ffffff;
+        padding: 10px 42px;
+      }
+
+      svg {
+        margin-left: 8px;
+      }
+    }
+  }
 }
