fix: projects position

--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -2,22 +2,28 @@
 
 .projects {
   img {
-    width: 100%;
+    width: 50%;
     height: 400px;
     object-fit: cover;
     border-radius: 8px;
   }
 
   li {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
     grid-gap: 60px;
+    width: 100%;
+
+    &:nth-child(2n) {
+      flex-direction: row-reverse;
+    }
 
     &:not(:last-child) {
       margin-bottom: 80px;
     }
 
     > div {
+      width: 50%;
+
       h3 {
         font-size: 38px;
         font-weight: 500;
