change colors default

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,4 +1,6 @@
 $primary-color: #26bb7d;
-$secondary-color: #3bc5f0;
+$secondary-color: #fff337;
 $yellow-color: #fec124;
+$blue-color: #3bc5f0;
+
 $tertiary-color: #000000;
