--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,12 +1,16 @@
 @use "../../assets/styles/colors.scss" as colors;
 
 .footer {
-  background: #fcfdfd;
+  background: black;
+  color: #fff;
+
+  p {
+    color: #fff;
+  }
 
   > div {
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid #f5f4ef;
     padding-top: 100px;
 
     .footer-top-logo {
@@ -35,11 +39,14 @@
 }
 
 .footer-bottom {
-  background: colors.$primary-color;
-  padding: 30px 0 !important;
+  .container {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 30px 0 !important;
+  }
+
+  background: black;
   font-weight: 500;
   letter-spacing: 0.3px;
-  margin-top: 80px;
 
   svg {
     font-size: 20px;
@@ -49,7 +56,12 @@
   > div {
     display: flex;
     align-items: center;
-    color: #fff;
     justify-content: space-between;
+    color: #fff;
+
+    span {
+      color: #6c6c6c;
+      font-size: 12px;
+    }
   }
 }
