--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -92,8 +92,11 @@ p {
 }
 
 .section {
-  border-top: 1px solid #f5f4ef;
   padding: 100px 0;
+}
+
+.section-border > div {
+  border-top: 1px solid #f5f4ef;
 }
 
 .section-header {
