--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -6,7 +6,6 @@
   letter-spacing: 0.3px;
   height: 100vh;
   background-image: url('/questions-bro.svg');
-  // background-image: url('../../assets/images/home-woman.svg');
   background-position: bottom 10% right -600px;
   background-repeat: no-repeat;
   background-size: 1600px;
@@ -21,9 +20,14 @@
     font-size: 20px;
     max-width: 700px;
   }
+
+  svg {
+    color: #555555;
+    font-size: 18px;
+  }
 }
 
-.container-input {
+.home-content__input {
   display: flex;
   align-items: flex-end;
   background: #ffffff;
@@ -46,7 +50,7 @@
   }
 }
 
-.previously-researched {
+.home-content__previously-researched {
   display: flex;
   align-items: center;
   margin-top: 30px;
