refactor styles colors

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,6 +1,13 @@
-$primary-color: #26bb7d;
-$secondary-color: #fff337;
-$yellow-color: #fec124;
-$blue-color: #3bc5f0;
-
-$tertiary-color: #000000;
+$primary: #26bb7d;
+$secondary: #fff337;
+$orange: #fec124;
+$blue: #3bc5f0;
+$title: #2e2e2e;
+$paragraph: #6c6c6c;
+$bg-light: #fcfdfd;
+$bg-black: #000000;
+$white: #ffffff;
+$gray: #595959;
+$gray-medium: #9c9c9c;
+$gray-light: #dedede;
+$border-light: #f5f4ef;
