--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,20 +1,20 @@
 @use "../../assets/styles/colors.scss" as colors;
 
 .footer {
-  background: black;
+  background: colors.$bg-black;
 
   a {
     transition: all 0.2s linear;
 
     &:hover {
-      color: colors.$secondary-color;
+      color: colors.$secondary;
     }
   }
 
   a,
   p,
   strong {
-    color: #fff;
+    color: colors.$white;
   }
 
   > div {
@@ -53,7 +53,7 @@
     padding: 30px 0 !important;
   }
 
-  background: black;
+  background: colors.$bg-black;
   font-weight: 500;
   letter-spacing: 0.3px;
 
@@ -68,7 +68,7 @@
     justify-content: space-between;
 
     span {
-      color: #6c6c6c;
+      color: colors.$paragraph;
       font-size: 12px;
     }
   }
