--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -22,7 +22,7 @@
   }
 
   svg {
-    color: #555555;
+    color: colors.$gray;
     font-size: 18px;
   }
 }
@@ -30,7 +30,7 @@
 .home-content__input {
   display: flex;
   align-items: flex-end;
-  background: #ffffff;
+  background: colors.$white;
   padding: 30px 54px;
   width: max-content;
   border-radius: 3px;
@@ -64,8 +64,8 @@
     margin-left: 20px;
 
     li {
-      background: #ffffff;
-      color: #9c9c9c;
+      background: colors.$white;
+      color: colors.$gray-medium;
       border-radius: 3px;
       padding: 8px 25px;
       margin-right: 15px;
