--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -31,7 +31,7 @@
       h3 {
         font-size: 38px;
         font-weight: 500;
-        color: colors.$secondary-color;
+        color: colors.$secondary;
       }
 
       h1 {
@@ -40,30 +40,6 @@
 
       p {
         line-height: 26px;
-      }
-    }
-
-    .projects-content-button {
-      display: flex;
-      align-items: center;
-      width: max-content;
-      margin-top: 35px;
-      cursor: pointer;
-      border-radius: 3px;
-      letter-spacing: 0.3px;
-      padding: 10px 0;
-      font-weight: 500;
-      color: #595959;
-      transition: all 0.3s linear;
-
-      &:hover {
-        background: colors.$primary-color;
-        color: #ffffff;
-        padding: 10px 42px;
-      }
-
-      svg {
-        margin-left: 8px;
       }
     }
   }
