contact, feedback, footer and services components responsive

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -21,6 +21,13 @@ body,
 body {
   -webkit-font-smoothing: antialiased;
   background: $bg-light;
+
+  @media (max-width: 500px) {
+    .container {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
 }
 
 body,
@@ -129,6 +136,7 @@ p {
 
   > div {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 
@@ -165,6 +173,30 @@ p {
   p {
     font-size: 16px;
     max-width: 450px;
+  }
+
+  @media (max-width: 500px) {
+    margin-bottom: 60px;
+
+    h3 {
+      letter-spacing: 2.5px;
+      padding-left: 50px;
+
+      &::before {
+        width: 34px;
+      }
+    }
+
+    h1 {
+      font-size: 38px;
+      width: 100%;
+    }
+
+    p {
+      font-size: 14px;
+      margin-top: 15px;
+      width: 100%;
+    }
   }
 }
 
