--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -25,53 +25,109 @@
     color: colors.$gray;
     font-size: 18px;
   }
-}
 
-.home-content__input {
-  display: flex;
-  align-items: flex-end;
-  background: colors.$white;
-  padding: 30px 54px;
-  width: max-content;
-  border-radius: 3px;
-  box-shadow: 27px 17px 100px rgba(0, 0, 0, 0.25);
-
-  div {
+  .home-content__input {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+    background: colors.$white;
+    padding: 30px 54px;
+    width: max-content;
+    border-radius: 3px;
+    box-shadow: 27px 17px 100px rgba(0, 0, 0, 0.25);
 
-    strong {
-      font-weight: 500;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-      padding-bottom: 2px;
-      margin: 0 30px 0 16px;
-      width: 350px;
+    div {
+      display: flex;
+      align-items: center;
+
+      strong {
+        font-weight: 500;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+        padding-bottom: 2px;
+        margin: 0 30px 0 16px;
+        width: 350px;
+      }
     }
   }
-}
 
-.home-content__previously-researched {
-  display: flex;
-  align-items: center;
-  margin-top: 30px;
+  .home-content__previously-researched {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
 
-  span {
-    font-weight: 500;
+    span {
+      font-weight: 500;
+    }
+
+    ul {
+      display: flex;
+      margin-left: 20px;
+
+      li {
+        background: colors.$white;
+        color: colors.$gray-medium;
+        border-radius: 3px;
+        padding: 8px 25px;
+        margin-right: 15px;
+        font-size: 12px;
+        font-weight: 600;
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+      }
+    }
   }
 
-  ul {
-    display: flex;
-    margin-left: 20px;
+  @media (max-width: 500px) {
+    padding: 80px 0;
+    height: 100%;
+    background-image: none;
 
-    li {
-      background: colors.$white;
-      color: colors.$gray-medium;
-      border-radius: 3px;
-      padding: 8px 25px;
-      margin-right: 15px;
-      font-size: 12px;
-      font-weight: 600;
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    h1 {
+      font-size: 36px;
+      width: 100%;
+      margin: 20px 0 40px 0;
+    }
+
+    h4 {
+      font-size: 20px;
+      width: 100%;
+    }
+
+    svg {
+      font-size: 18px;
+    }
+
+    .home-content__input {
+      flex-wrap: wrap;
+      padding: 20px 24px;
+      width: 100%;
+
+      div {
+        width: 100%;
+
+        svg {
+          font-size: 20px;
+        }
+
+        strong {
+          padding-bottom: 2px;
+          margin: 0 30px 0 16px;
+          border-bottom: none;
+          width: 100%;
+        }
+      }
+    }
+
+    .home-content__previously-researched {
+      flex-wrap: wrap;
+
+      ul {
+        flex-wrap: wrap;
+        margin-left: 0;
+
+        li {
+          margin-top: 15px;
+          margin-right: 15px;
+        }
+      }
     }
   }
 }
