--- a/src/components/Services/styles.scss
+++ b/src/components/Services/styles.scss
@@ -3,7 +3,7 @@
 .services {
   ul {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, 1fr);
     grid-gap: 60px;
 
     li {
@@ -35,6 +35,18 @@
       font-size: 36px;
       border-radius: 15px;
       margin-right: 35px;
+    }
+  }
+
+  @media (max-width: 500px) {
+    ul {
+      li > div {
+        flex-wrap: wrap;
+      }
+
+      .services-icons {
+        margin-bottom: 20px;
+      }
     }
   }
 }
