--- a/src/components/Feedbacks/styles.scss
+++ b/src/components/Feedbacks/styles.scss
@@ -20,7 +20,7 @@
 
   .feedbacks-content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 40px;
 
     .feedbacks-content-quot {
